[WTF] Coverity scan issues https://bugs.webkit.org/show_bug.cgi?id=186800

Reviewed by Brent Fulgham.

* wtf/CheckedArithmetic.h: Swap the operands to multiply().
* wtf/ThreadSpecific.h: Initialize the m_key variable.
* wtf/dtoa.cpp: Initialize the next variable.

Canonical link: https://commits.webkit.org/203196@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234251 268f45cc-cd09-0410-ab3c-d52691b4dbfc