Source/WTF/wtf/dtoa.cpp
@@ -360,7 +360,7 @@ struct P5Node {
 public:
     P5Node() { }
     BigInt val;
-    P5Node* next;
+    P5Node* next { nullptr };
 };
 
 static P5Node* p5s;
